[package]
name = "appmarkable"
version = "0.1.0"
authors = ["Linus <linus@cosmos-ink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
env_logger = "0.7.1"
libremarkable = "0.4.1"
log = "0.4.11"
nix = "0.18.0"
signal-hook = "0.1.16"
wait-timeout = "0.2.0"