[package]
name = "appmarkable"
version = "0.1.3"
authors = ["Linus <linus@cosmos-ink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
env_logger = "0.7.1"
libremarkable = { git = "https://github.com/LinusCDE/libremarkable.git", rev = "ee378a88" }
log = "0.4.11"
nix = "0.18.0"
signal-hook = "0.1.16"
wait-timeout = "0.2.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
